Banco de dados H2 e criado automaticamente da base de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 !server.port=${port:8081}  caso porta 8080 sa usado bu ta cria otu porta
+
+spring.datasource.url=jdbc:h2:mem:testdb 
+spring.datasource.username=sa
+spring.datasource.password=
+ 
+spring.jpa.show-sql=true 
+spring.jpa.properties.hibernate.format_sql=true 
